update for metadata endpoint
